# src/controllers/localUnits.controller.ts
@@ -1,28 +1,32 @@
-import {Body, Controller, Delete, Get, Path, Post, Put, Route, SuccessResponse, Tags} from "tsoa";
+import {Body, Controller, Delete, Get, Path, Post, Put, Route, Security, SuccessResponse, Tags} from "tsoa";
 import * as LocalUnitsService from "../services/localUnits.service";
 import {LocalUnit} from "../models/localUnits.model";
-import {Id} from "../utils/query";
+import {Id} from "../entities/enums";
 
-@Route("LocalUnits")
+@Route("localUnits")
 @Tags("Local unit")
 export class LocalUnitsController extends Controller {
 
+    @Security("jwt", [])
     @Get("/")
     async getAll() {
         return await LocalUnitsService.getAll()
     }
 
+    @Security("jwt", [])
     @Get("/:id")
     async getById(@Path() id: Id) {
         return await LocalUnitsService.getById(id)
     }
 
+    @Security("jwt", [])
     @SuccessResponse('201', 'Created')
     @Post("/")
     async create(@Body() localUnit: LocalUnit) {
         return await LocalUnitsService.create(localUnit)
     }
 
+    @Security("jwt", [])
     @Put("/:id")
     async update(@Path() id: Id, @Body() localUnit: LocalUnit) {
         return await LocalUnitsService.update(id, localUnit)
@@ -31,6 +35,7 @@ export class LocalUnitsController extends Controller {
     /**
      * Logic delete a localUnit
      */
+    @Security("jwt", [])
     @SuccessResponse("204")
     @Delete("/:id")
     async logicDelete(@Path() id: Id) {
