# src/controllers/users.controller.ts
@@ -1,28 +1,32 @@
-import {Body, Controller, Delete, Get, Path, Post, Put, Route, SuccessResponse, Tags} from "tsoa";
+import {Body, Controller, Delete, Get, Path, Post, Put, Route, Security, SuccessResponse, Tags} from "tsoa";
 import * as UsersService from "../services/users.service";
 import {User} from "../models/users.model";
-import {Id} from "../utils/query";
+import {Id} from "../entities/enums";
 
-@Route("Users")
+@Route("users")
 @Tags("User")
 export class UsersController extends Controller {
 
+    @Security("jwt",[])
     @Get("/")
     async getAll() {
         return await UsersService.getAll()
     }
 
+    @Security("jwt", [])
     @Get("/:id")
     async getById(@Path() id: Id) {
         return await UsersService.getById(id)
     }
 
+    @Security("jwt", [])
     @SuccessResponse('201', 'Created')
     @Post("/")
     async create(@Body() user: User) {
         return await UsersService.create(user)
     }
 
+    @Security("jwt", [])
     @Put("/:id")
     async update(@Path() id: Id, @Body() user: User) {
         return await UsersService.update(id, user)
@@ -31,16 +35,11 @@ export class UsersController extends Controller {
     /**
      * Logic delete a user
      */
+    @Security("jwt", [])
     @SuccessResponse("204")
     @Delete("/:id")
     async logicDelete(@Path() id: Id) {
         return await UsersService.logicDelete(id)
-    }
-
-
-    @Post("/login")
-    async login(@Body() params: { email: string, password: string }) {
-        return await UsersService.login(params)
     }
 
 }
