# src/models/users.model.ts
@@ -1,11 +1,14 @@
-import helper from '../utils/helper';
-import {Id, query} from '../utils/query';
-import {UUID} from "../utils/uuid";
+import {query} from '../utils/query';
 import {IsDate, IsEmail, IsLowercase, IsUUID} from "class-validator";
+import {emptyOrRow, emptyOrRows} from "../utils/emptyOrRows";
+import {Id, UUID} from "../entities/enums";
+
+type Status = 'ACTIVE' | 'INACTIVE' | 'DISABLED';
+type Role = 'BASIC' | 'ADMIN';
 
 export class User {
 
-    id?: number;
+    id?: Id;
 
     @IsUUID()
     uuid?: UUID;
@@ -20,7 +23,9 @@ export class User {
 
     password?: string;
 
-    roleId?: number;
+    status?: Status;
+
+    role?: Role;
 
     @IsDate()
     createdAt?: Date;
@@ -32,6 +37,7 @@ export class User {
 
     @IsDate()
     updatedAt?: Date;
+
 }
 
 export async function getAll() {
@@ -39,7 +45,7 @@ export async function getAll() {
         SELECT *
         FROM users
     `);
-    return helper.emptyOrRows(rows)
+    return emptyOrRows(rows)
 }
 
 export async function getById(id: Id) {
@@ -49,17 +55,17 @@ export async function getById(id: Id) {
         FROM users
         WHERE id = ?
     `, [id]);
-    return helper.emptyOrRows(row)
+    return emptyOrRow(row)
 }
 
-export async function findOne(param: string, value: string | number) {
+export async function findOne(column: string, value: string | number) {
 
     const row = await query(`
         SELECT *
         FROM users
-        WHERE ? = ?
-    `, [param, value]);
-    return helper.emptyOrRows(row)
+        WHERE ${column} = ?
+    `, [value]);
+    return emptyOrRow(row)
 }
 
 export async function create(user: User) {
@@ -68,16 +74,14 @@ export async function create(user: User) {
                           name,
                           surname,
                           email,
-                          password,
-                          role_id)
-        VALUES (?, ?, ?, ?, ?, ?)
+                          password)
+        VALUES (?, ?, ?, ?, ?)
     `, [
         user?.uuid,
         user?.name,
         user?.surname,
         user?.email,
         user?.password,
-        user?.roleId
     ])
 }
 
@@ -85,16 +89,18 @@ export async function update(id: Id, user: User) {
 
     return await query(`
         UPDATE users t
-        SET t.name    = ?,
-            t.surname = ?,
-            t.email   = ?,
-            t.role_id = ?
+        SET t.name     = ?,
+            t.surname  = ?,
+            t.email    = ?,
+            t.role     = ?,
+            t.password = ?
         WHERE t.id = ?;
     `, [
         user.name,
         user.surname,
         user.email,
-        user.roleId,
+        user.role,
+        user.password,
         id
     ]);
 }
